--- a/UI/index.html
+++ b/UI/index.html
@@ -1,10 +1,9 @@
-<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://uploads-ssl.webflow.com/622f09894fc230ad07de84a9/63b9621e9d70bbceb4c467b2_Group%2085685.svg" /> <!-- Updated favicon link -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>SenseAI</title>
   </head>
   <body>
     <div id="root"></div>
